src/tests/snapshots/hebi__tests__simple__opt_none.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
none ?? 2

# Result (success):
2

# Stdout:


