src/tests/snapshots/hebi__tests__simple__opt_val.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Modules:


# Input:
2 ?? none

# Result (success):
2

# Stdout:


