src/tests/snapshots/hebi__tests__simple__plus_n.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Modules:


# Input:
+2

# Result (success):
2

# Stdout:


