src/tests/snapshots/hebi__tests__simple__true_and_false.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Modules:


# Input:
true && false

# Result (success):
false

# Stdout:


